# multiUser-CLI-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  server.cpp
include/: buffer_service.hpp  clipboard.hpp  editor.hpp  file_io.hpp  gap_buffer.hpp  models.hpp  selection_service.hpp  syntax_service.hpp  terminal.hpp  terminal_manager.hpp  view_service.hpp
src/: buffer_service.cpp  clipboard.cpp  editor.cpp  file_io.cpp  gap_buffer.cpp  main.cpp  selection_service.cpp  syntax_service.cpp  terminal.cpp  terminal_manager.cpp  view_service.cpp
tests/: test_gap_buffer.cpp
